--- a/scss/components/_store.scss
+++ b/scss/components/_store.scss
@@ -61,7 +61,7 @@ div[class*="listing-"] {
   background: var(--dark-primary);
 }
 
-.theme-dark div[class*="applicationStore-"] {
+.theme-dark div[class*="applicationStore"] {
   background: var(--dark-secondary);
 
   a[class*="tileWrapper-"] {
